# umcnbibparser

./: .gitignore  LICENSE  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
bibparser/: authors.py  bibreader.py  core.py  exceptions.py  mysql.py
bibparser/templates/: newpubs.csv.j2  newpubs.sql.j2  newpubs_limited.csv.j2
examples/: convert_bibfile.py
tests/: __init__.py  test_bibparser.py
tests/resources/: an_entry_ill_formed.bib  fullstrings.bib  multiple_initials_entry.bib  some_entries.bib
