[tool.poetry]
name = "bibparser"
version = "0.1.0"
description = "lateX bib format parser for deparment of medical imaging research websites"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
latexcodec = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^22.1.0"

[tool.black]
line-length = 79
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37, py38, py39, py310

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --cov-branch --cov-report term-missing --cov=tests/ --cov=pyswot/ --basetemp={envtmpdir} {posargs}
"""
